--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v3.1.0
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3.5.1
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '17'
+        distribution: 'zulu'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file sandbox-maven/pom.xml
