--- a/sandbox-maven/pom.xml
+++ b/sandbox-maven/pom.xml
@@ -24,4 +24,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+    <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/tdupoiron/sandbox-maven</url>
+    </repository>
+  </distributionManagement>
+  
 </project>
