--- a/sandbox-maven/pom.xml
+++ b/sandbox-maven/pom.xml
@@ -25,12 +25,12 @@
     </dependency>
   </dependencies>
   
-    <distributionManagement>
+   <!-- <distributionManagement>
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
       <url>https://maven.pkg.github.com/tdupoiron/sandbox-maven</url>
     </repository>
-  </distributionManagement>
+  </distributionManagement>-->
   
 </project>
