--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package -f sandbox-maven/pom.xml
 
+    - name: echo env
+      run: env
+
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -f sandbox-maven/pom.xml -s $GITHUB_WORKSPACE/settings.xml
       env:
