--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,13 +9,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3.1.0
+    - name: Checkout source code
+      uses: actions/checkout@v3.1.0
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3.5.1
       with:
         java-version: '17'
         distribution: 'zulu'
         cache: maven
+        
     - name: Build with Maven
       run: mvn -B package -f sandbox-maven/pom.xml
 
