--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,15 +19,14 @@ jobs:
         distribution: 'zulu'
         cache: maven
         
-    - name: Cache Libs
-      id: cache-libs
-      uses: actions/cache@v3
-      with:
-        path: $HOME/.m2/repository
-        key: ${{ runner.os }}-libs
-        
     - name: Build with Maven
       run: mvn -B package -f sandbox-maven/pom.xml
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: maven-sandbox-lib
+        path: ./**/sandbox-maven-*.jar
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -f sandbox-maven/pom.xml -s $GITHUB_WORKSPACE/settings.xml
