--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,6 +8,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      PACKAGE_PATTERN: 'sandbox-maven-*.jar'
+
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3.1.0
@@ -22,11 +25,14 @@ jobs:
     - name: Build with Maven
       run: mvn -B package -f sandbox-maven/pom.xml
 
+    - name: Get Package Name
+      run: find . -name $PACKAGE_PATTERN -printf "%f\n"
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         name: maven-sandbox-lib
-        path: ./**/sandbox-maven-*.jar
+        path: ./**/$PACKAGE_PATTERN
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -f sandbox-maven/pom.xml -s $GITHUB_WORKSPACE/settings.xml
