--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Get Package Path
       id: get_package
       run: | 
-        echo "::set-output name=package_path::$(find . -name $PACKAGE_PATTERN))"
-        echo "::set-output name=package_name::$(find . -name $PACKAGE_PATTERN -printf \"%f\\n\"))"
+        echo "::set-output name=package_path::$(find . -name $PACKAGE_PATTERN)"
+        echo "::set-output name=package_name::$(find . -name $PACKAGE_PATTERN -printf \"%f\\n\")"
 
     - name: Use short SHA
       run: |
