--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,7 @@
 name: Java CI with Maven
 
 on:
+  push:
   workflow_dispatch:  
 
 jobs:
@@ -29,7 +30,7 @@ jobs:
       id: get_package
       run: | 
         echo "::set-output name=package_path::$(find . -name $PACKAGE_PATTERN)"
-        echo "::set-output name=package_name::$(find . -name $PACKAGE_PATTERN -printf \"%f\\n\")"
+        echo "::set-output name=package_name::$(find . -name $PACKAGE_PATTERN -printf "%f\n")"
 
     - name: Use short SHA
       run: |
