--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,18 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/devcontainers/features/java:1": {}
+    "ghcr.io/devcontainers/features/java:1": {
+      "version": "17",
+      "distro": "open",
+      "installMaven": "true"
+    },
+    "extensions": [
+      "vscjava.vscode-java-pack",
+      "GitHub.copilot",
+      "ms-vscode.vscode-typescript-next"
+    ],
+    "settings": {
+      "java.configuration.updateBuildConfiguration": "interactive"
+    }
   }
 }
