--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,21 @@
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
       "version": "17",
-      "distro": "open",
       "installMaven": "true"
-    },
-    "extensions": [
-      "vscjava.vscode-java-pack",
-      "GitHub.copilot",
-      "ms-vscode.vscode-typescript-next"
-    ],
-    "settings": {
-      "java.configuration.updateBuildConfiguration": "interactive"
     }
+  },
+  "extensions": [
+    "GitHub.copilot",
+    "vscjava.vscode-java-pack",
+    "vscjava.vscode-java-test",
+    "vscjava.vscode-maven",
+    "github.vscode-codeql",
+    "github.vscode-pull-request-github",
+    "slevesque.vscode-zipexplorer"
+  ],
+  "postCreateCommand": "git submodule init && git submodule update --recursive",
+  "settings": {
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "codeQL.runningQueries.memory": 2048
   }
 }
