--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,11 +8,8 @@
   },
   "extensions": [
 	"GitHub.copilot",
-	"GitHub.vscode-codeql"
+	"GitHub.vscode-codeql",
 ],
-  "postCreateCommand": "git submodule init && git submodule update --recursive",
   "settings": {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "codeQL.runningQueries.memory": 2048
   }
 }
