--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "image": "mcr.microsoft.com/cstsectools/codeql-container",
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
       "version": "17",
@@ -8,7 +8,7 @@
   },
   "extensions": [
 	"GitHub.copilot",
-	"GitHub.vscode-codeql",
+	"GitHub.vscode-codeql"
 ],
   "settings": {
   }
